--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="" />
+    <meta
+      name="description"
+      content="Swap your old NFTs for new limited-edition NFTs!"
+    />
+    <meta
+      property="og:image"
+      content="https://www.raspberrydao.org/static/media/logo.4df44b8f18b3da3ff110690e613f5f39.svg"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
