added previw image and description

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,10 @@
       name="description"
       content="Swap your old NFTs for new limited-edition NFTs!"
     />
+    <meta property="og:image" content="https://ibb.co/BVY5Q4y" />
     <meta
       property="og:image"
-      content="https://www.raspberrydao.org/static/media/logo.4df44b8f18b3da3ff110690e613f5f39.svg"
+      content="https://imgtr.ee/images/2023/03/29/UqOeb.png"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
