--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,9 @@
       name="description"
       content="Swap your old NFTs for new limited-edition NFTs!"
     />
-    <meta property="og:image" content="https://ibb.co/BVY5Q4y" />
     <meta
       property="og:image"
-      content="https://imgtr.ee/images/2023/03/29/UqOeb.png"
+      content="https://photos.google.com/search/_tra_/photo/AF1QipPNYVEpw60uIQ2mV1CwAwstGGlYjmzUN3TtB2w"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
