--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,7 @@
       name="description"
       content="Swap your old NFTs for new limited-edition NFTs!"
     />
-    <meta
-      property="og:image"
-      content="https://photos.google.com/search/_tra_/photo/AF1QipPNYVEpw60uIQ2mV1CwAwstGGlYjmzUN3TtB2w"
-    />
+    <meta property="og:image" content="https://iili.io/HNZn5vt.jpg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
