updated previw image

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Swap your old NFTs for new limited-edition NFTs!"
     />
-    <meta property="og:image" content="https://iili.io/HNZn5vt.jpg" />
+    <meta property="og:image" content="https://iili.io/HNZoaUB.jpg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
